more renaming of acg to vci

--- a/Doc/images/src/mesh.collapse.tex
+++ b/Doc/images/src/mesh.collapse.tex
@@ -5,13 +5,13 @@
 \usepackage{tikz}
 \usepackage{color}
 
-\definecolor{ACG}{RGB}{55,91,64}
+\definecolor{VCI}{RGB}{55,91,64}
 
 \begin{document}
 
 \begin{center}
 
-%\colorbox{ACG}{
+%\colorbox{VCI}{
 
 \begin{tikzpicture}
  [
